#925: Move statistical classes to incubator module.